{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 2708,
  "lineage": "89561d0b-1a61-e900-2508-2443c9716a76",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHostA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:764364320071:instance/i-013dcf7f94268c874",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013dcf7f94268c874",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "myLabKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f351fd81eeeedfee",
            "private_dns": "ip-172-16-1-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.101",
            "public_dns": "ec2-52-90-206-108.compute-1.amazonaws.com",
            "public_ip": "52.90.206.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0082b1a5f0f28b87c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d2e4f5aa32bf154",
            "tags": {
              "Name": "BastionHostA"
            },
            "tags_all": {
              "Name": "BastionHostA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d582161f9f7b9ff9"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.myKeyPair",
            "module.compute.data.aws_ami.linux2",
            "module.compute.tls_private_key.tls_connector",
            "module.network.aws_subnet.publicA",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.BastionSG"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHostB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:764364320071:instance/i-04fab66cf83ae403a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04fab66cf83ae403a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "myLabKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0830471d5fce22d15",
            "private_dns": "ip-172-16-2-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.51",
            "public_dns": "ec2-44-204-108-161.compute-1.amazonaws.com",
            "public_ip": "44.204.108.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b56df848522fb41e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e25a80da807847f0",
            "tags": {
              "Name": "BastionHostB"
            },
            "tags_all": {
              "Name": "BastionHostB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d582161f9f7b9ff9"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.myKeyPair",
            "module.compute.data.aws_ami.linux2",
            "module.compute.tls_private_key.tls_connector",
            "module.network.aws_subnet.publicB",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.BastionSG"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHostC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:764364320071:instance/i-0980676aa19e1c2db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0980676aa19e1c2db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "myLabKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09e659ba267753609",
            "private_dns": "ip-172-16-3-205.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.3.205",
            "public_dns": "ec2-107-23-252-52.compute-1.amazonaws.com",
            "public_ip": "107.23.252.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b41f65fc3bfd5671",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d25e875a76d5dba8",
            "tags": {
              "Name": "BastionHostC"
            },
            "tags_all": {
              "Name": "BastionHostC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d582161f9f7b9ff9"
            ]
          },
          "dependencies": [
            "module.compute.aws_key_pair.myKeyPair",
            "module.compute.data.aws_ami.linux2",
            "module.compute.tls_private_key.tls_connector",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.BastionSG"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-0d2acec67f404d1c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2acec67f404d1c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DbA"
            },
            "tags_all": {
              "Name": "DbA"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-03f8e1d9dffb82ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f8e1d9dffb82ebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DbB"
            },
            "tags_all": {
              "Name": "DbB"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dbC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-09cddd3d432615f71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cddd3d432615f71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DbC"
            },
            "tags_all": {
              "Name": "DbC"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natEipA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a33b76603235e8f9",
            "domain": "vpc",
            "id": "eipalloc-0a33b76603235e8f9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-204-63-235.compute-1.amazonaws.com",
            "public_ip": "18.204.63.235",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eipA_ForNat"
            },
            "tags_all": {
              "Name": "eipA_ForNat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natEipB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce6c99c913222add",
            "domain": "vpc",
            "id": "eipalloc-0ce6c99c913222add",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-81-156.compute-1.amazonaws.com",
            "public_ip": "44.206.81.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eipB_ForNat"
            },
            "tags_all": {
              "Name": "eipB_ForNat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natEipC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098aa874066d36d44",
            "domain": "vpc",
            "id": "eipalloc-098aa874066d36d44",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-175-71-74.compute-1.amazonaws.com",
            "public_ip": "35.175.71.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eipC_ForNat"
            },
            "tags_all": {
              "Name": "eipC_ForNat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:internet-gateway/igw-094a61afa6db65359",
            "id": "igw-094a61afa6db65359",
            "owner_id": "764364320071",
            "tags": {
              "Name": "MyIGW"
            },
            "tags_all": {
              "Name": "MyIGW"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "busybee-ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:764364320071:loadbalancer/app/busybee-ALB/bfd7e155cc0fe026",
            "arn_suffix": "app/busybee-ALB/bfd7e155cc0fe026",
            "desync_mitigation_mode": "defensive",
            "dns_name": "busybee-ALB-1785266080.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:764364320071:loadbalancer/app/busybee-ALB/bfd7e155cc0fe026",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "busybee-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05b75e692ce7ec95b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06d2e4f5aa32bf154"
              },
              {
                "subnet_id": "subnet-0d25e875a76d5dba8"
              },
              {
                "subnet_id": "subnet-0e25a80da807847f0"
              }
            ],
            "subnets": [
              "subnet-06d2e4f5aa32bf154",
              "subnet-0d25e875a76d5dba8",
              "subnet-0e25a80da807847f0"
            ],
            "vpc_id": "vpc-029243fde226ae0f1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.MyIGW",
            "module.network.aws_subnet.publicA",
            "module.network.aws_subnet.publicB",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.AlbSG"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "busybee-Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:764364320071:listener/app/busybee-ALB/bfd7e155cc0fe026/347402ee297c4558",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:764364320071:targetgroup/busybee-TG-green/e8d0d20a98d6ca2e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:764364320071:listener/app/busybee-ALB/bfd7e155cc0fe026/347402ee297c4558",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:764364320071:loadbalancer/app/busybee-ALB/bfd7e155cc0fe026",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.MyIGW",
            "module.network.aws_lb.busybee-ALB",
            "module.network.aws_lb_target_group.busybee-TG",
            "module.network.aws_subnet.publicA",
            "module.network.aws_subnet.publicB",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.AlbSG"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "busybee-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:764364320071:targetgroup/busybee-TG-green/e8d0d20a98d6ca2e",
            "arn_suffix": "targetgroup/busybee-TG-green/e8d0d20a98d6ca2e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/usr/share/nginx/html/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:764364320071:targetgroup/busybee-TG-green/e8d0d20a98d6ca2e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "busybee-TG-green",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:764364320071:targetgroup/busybee-TG-blue/7575f48b157a6779",
            "arn_suffix": "targetgroup/busybee-TG-blue/7575f48b157a6779",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/usr/share/nginx/html/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:764364320071:targetgroup/busybee-TG-blue/7575f48b157a6779",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "busybee-TG-blue",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a33b76603235e8f9",
            "connectivity_type": "public",
            "id": "nat-00d44483a856621f9",
            "network_interface_id": "eni-02cd7623fc1c2abf6",
            "private_ip": "172.16.1.39",
            "public_ip": "18.204.63.235",
            "subnet_id": "subnet-06d2e4f5aa32bf154",
            "tags": {
              "Name": "natA"
            },
            "tags_all": {
              "Name": "natA"
            }
          },
          "dependencies": [
            "module.network.aws_eip.natEipA",
            "module.network.aws_subnet.publicA",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ce6c99c913222add",
            "connectivity_type": "public",
            "id": "nat-0e890456ee4995ae3",
            "network_interface_id": "eni-0e0a480e65c50c32b",
            "private_ip": "172.16.2.230",
            "public_ip": "44.206.81.156",
            "subnet_id": "subnet-0e25a80da807847f0",
            "tags": {
              "Name": "natB"
            },
            "tags_all": {
              "Name": "natB"
            }
          },
          "dependencies": [
            "module.network.aws_eip.natEipB",
            "module.network.aws_subnet.publicB",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098aa874066d36d44",
            "connectivity_type": "public",
            "id": "nat-02252bad916b18a4c",
            "network_interface_id": "eni-0fe601e9ef99a1fcc",
            "private_ip": "172.16.3.177",
            "public_ip": "35.175.71.74",
            "subnet_id": "subnet-0d25e875a76d5dba8",
            "tags": {
              "Name": "natC"
            },
            "tags_all": {
              "Name": "natC"
            }
          },
          "dependencies": [
            "module.network.aws_eip.natEipC",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyPublicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:route-table/rtb-0bff1a8a6f9c8c15e",
            "id": "rtb-0bff1a8a6f9c8c15e",
            "owner_id": "764364320071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094a61afa6db65359",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyPublicRoute"
            },
            "tags_all": {
              "Name": "MyPublicRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.MyIGW",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:route-table/rtb-032dc41e1f4640950",
            "id": "rtb-032dc41e1f4640950",
            "owner_id": "764364320071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00d44483a856621f9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteA"
            },
            "tags_all": {
              "Name": "PrivateRouteA"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.natEipA",
            "module.network.aws_nat_gateway.natA",
            "module.network.aws_subnet.publicA",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:route-table/rtb-086ea1fcbd9e87961",
            "id": "rtb-086ea1fcbd9e87961",
            "owner_id": "764364320071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e890456ee4995ae3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteB"
            },
            "tags_all": {
              "Name": "PrivateRouteB"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.natEipB",
            "module.network.aws_nat_gateway.natB",
            "module.network.aws_subnet.publicB",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRouteC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:route-table/rtb-0e7ed11bce5be6380",
            "id": "rtb-0e7ed11bce5be6380",
            "owner_id": "764364320071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02252bad916b18a4c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteC"
            },
            "tags_all": {
              "Name": "PrivateRouteC"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.natEipC",
            "module.network.aws_nat_gateway.natC",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateAppA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d4292a648652f29",
            "route_table_id": "rtb-032dc41e1f4640950",
            "subnet_id": "subnet-0a492dc9f15fb40b2"
          },
          "dependencies": [
            "module.network.aws_eip.natEipA",
            "module.network.aws_nat_gateway.natA",
            "module.network.aws_route_table.PrivateRouteA",
            "module.network.aws_subnet.appA",
            "module.network.aws_subnet.publicA",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateAppB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0687dc283b2c7af08",
            "route_table_id": "rtb-086ea1fcbd9e87961",
            "subnet_id": "subnet-049bbdc9fc34b6fc6"
          },
          "dependencies": [
            "module.network.aws_eip.natEipB",
            "module.network.aws_nat_gateway.natB",
            "module.network.aws_route_table.PrivateRouteB",
            "module.network.aws_subnet.appB",
            "module.network.aws_subnet.publicB",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateAppC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041114f3346dac282",
            "route_table_id": "rtb-0e7ed11bce5be6380",
            "subnet_id": "subnet-0edd9f005b1e3685f"
          },
          "dependencies": [
            "module.network.aws_eip.natEipC",
            "module.network.aws_nat_gateway.natC",
            "module.network.aws_route_table.PrivateRouteC",
            "module.network.aws_subnet.appC",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateDbA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090b9c75c87e2bcb9",
            "route_table_id": "rtb-032dc41e1f4640950",
            "subnet_id": "subnet-0d2acec67f404d1c0"
          },
          "dependencies": [
            "module.database.aws_subnet.dbA",
            "module.network.aws_eip.natEipA",
            "module.network.aws_nat_gateway.natA",
            "module.network.aws_route_table.PrivateRouteA",
            "module.network.aws_subnet.publicA",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateDbB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efb09c30d671be53",
            "route_table_id": "rtb-086ea1fcbd9e87961",
            "subnet_id": "subnet-03f8e1d9dffb82ebe"
          },
          "dependencies": [
            "module.database.aws_subnet.dbB",
            "module.network.aws_eip.natEipB",
            "module.network.aws_nat_gateway.natB",
            "module.network.aws_route_table.PrivateRouteB",
            "module.network.aws_subnet.publicB",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateDbC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a613b50651affe1",
            "route_table_id": "rtb-0e7ed11bce5be6380",
            "subnet_id": "subnet-09cddd3d432615f71"
          },
          "dependencies": [
            "module.database.aws_subnet.dbC",
            "module.network.aws_eip.natEipC",
            "module.network.aws_nat_gateway.natC",
            "module.network.aws_route_table.PrivateRouteC",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicSubnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bd31ce89a3e9ba1",
            "route_table_id": "rtb-0bff1a8a6f9c8c15e",
            "subnet_id": "subnet-06d2e4f5aa32bf154"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.MyIGW",
            "module.network.aws_route_table.MyPublicRoute",
            "module.network.aws_subnet.publicA",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicSubnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-039200e7d85cf4f2b",
            "route_table_id": "rtb-0bff1a8a6f9c8c15e",
            "subnet_id": "subnet-0e25a80da807847f0"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.MyIGW",
            "module.network.aws_route_table.MyPublicRoute",
            "module.network.aws_subnet.publicB",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicSubnetC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad319278fca68971",
            "route_table_id": "rtb-0bff1a8a6f9c8c15e",
            "subnet_id": "subnet-0d25e875a76d5dba8"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.MyIGW",
            "module.network.aws_route_table.MyPublicRoute",
            "module.network.aws_subnet.publicC",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "appA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-0a492dc9f15fb40b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a492dc9f15fb40b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppA"
            },
            "tags_all": {
              "Name": "AppA"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "appB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-049bbdc9fc34b6fc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049bbdc9fc34b6fc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppB"
            },
            "tags_all": {
              "Name": "AppB"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "appC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-0edd9f005b1e3685f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edd9f005b1e3685f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppC"
            },
            "tags_all": {
              "Name": "AppC"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-06d2e4f5aa32bf154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d2e4f5aa32bf154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicA"
            },
            "tags_all": {
              "Name": "publicA"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-0e25a80da807847f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e25a80da807847f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicB"
            },
            "tags_all": {
              "Name": "publicB"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:subnet/subnet-0d25e875a76d5dba8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d25e875a76d5dba8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764364320071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicC"
            },
            "tags_all": {
              "Name": "publicC"
            },
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:vpc/vpc-029243fde226ae0f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0e0815d65d5c9feee",
            "default_route_table_id": "rtb-0c45182be89b1de98",
            "default_security_group_id": "sg-0e0c5775d4d2c0076",
            "dhcp_options_id": "dopt-05751353b2ae3fe33",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-029243fde226ae0f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c45182be89b1de98",
            "owner_id": "764364320071",
            "tags": {
              "Name": "busybeeVPC"
            },
            "tags_all": {
              "Name": "busybeeVPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AlbSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:security-group/sg-05b75e692ce7ec95b",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b75e692ce7ec95b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "AlbSG",
            "name_prefix": "",
            "owner_id": "764364320071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AlbSG"
            },
            "tags_all": {
              "Name": "AlbSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AppSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:security-group/sg-007f768c38c554771",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007f768c38c554771",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d582161f9f7b9ff9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b75e692ce7ec95b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b75e692ce7ec95b"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-05b75e692ce7ec95b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "AppSG",
            "name_prefix": "",
            "owner_id": "764364320071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AppSG"
            },
            "tags_all": {
              "Name": "AppSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.AlbSG",
            "module.security.aws_security_group.BastionSG"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BastionSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:security-group/sg-0d582161f9f7b9ff9",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d582161f9f7b9ff9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionSG",
            "name_prefix": "",
            "owner_id": "764364320071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BastionSG"
            },
            "tags_all": {
              "Name": "BastionSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EcsSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:security-group/sg-08bf8881cd7af82d0",
            "description": "Allow traffic from bastion hosts and ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bf8881cd7af82d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d582161f9f7b9ff9"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b75e692ce7ec95b"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc82b085df003100"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b75e692ce7ec95b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b75e692ce7ec95b"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-05b75e692ce7ec95b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "EcsSG",
            "name_prefix": "",
            "owner_id": "764364320071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EcsSG"
            },
            "tags_all": {
              "Name": "EcsSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.AlbSG",
            "module.security.aws_security_group.BastionSG",
            "module.security.aws_security_group.dbSG",
            "module.security.aws_security_group.db_access_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:security-group/sg-0fc82b085df003100",
            "description": "Allow mySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc82b085df003100",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aa41d35ccbe89fd7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dbSG",
            "name_prefix": "",
            "owner_id": "764364320071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dbSG"
            },
            "tags_all": {
              "Name": "dbSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.db_access_sg"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764364320071:security-group/sg-0aa41d35ccbe89fd7",
            "description": "Allow access to RDS",
            "egress": [],
            "id": "sg-0aa41d35ccbe89fd7",
            "ingress": [],
            "name": "db-access-sg",
            "name_prefix": "",
            "owner_id": "764364320071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-access-sg"
            },
            "tags_all": {
              "Name": "db-access-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-029243fde226ae0f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}